Fixed Swagger documentation
